--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,182 @@
-/* You can add global styles to this file, and also import other style files */
+/*Google fonts*/
+@import url('https://fonts.googleapis.com/css?family=Arimo|Dosis|Inconsolata|Raleway');
+
+* {
+    box-sizing: border-box;
+}
+
+header,
+section {
+    overflow: hidden;
+}
+
+:root {
+    --Arimo: "Arimo", cursive;
+    --Dosis: "Dosis", cursive;
+    --Inconsolata: "Inconsolata", cursive;
+    --Raleway: "Raleway", cursive;
+    --light-black: #2e2c2caf;
+    --bggradient: linear-gradient(to bottom, #dd2476, #ff512f);
+    --bggradientInverse: linear-gradient(to bottom, #ff512f, #ffffff);
+    --light-gray: rgba(255, 255, 255, 0.877);
+}
+
+header a {
+    color: #dd2476 !important;
+}
+
+header a:hover {
+    color: #212529 !important;
+}
+
+header {
+    background: #dd2476;
+    background: var(--bggradient);
+}
+
+header .nav-link:hover {
+    color: black;
+}
+
+header .row .col-md-5 {
+    padding: 4.2vmin 1vmin;
+}
+
+header .row .col-md-7 {
+    padding: 22vmin 1vmin;
+    padding-bottom: 35vmin;
+    font-family: var(--Raleway);
+    color: white;
+}
+
+header .row .col-md-5 img {
+    width: 90%;
+}
+
+header .container .col-md-7 h6 {
+    padding: 1vmin;
+    letter-spacing: 10px;
+}
+
+header .container .col-md-7 h1 {
+    font-size: 6vmin;
+    font-weight: bold;
+    padding: 0.1em 0em;
+}
+
+header .container .col-md-7 p {
+    padding: 1vmin 5vmin;
+}
+
+header .container .col-md-7 button {
+    border-radius: 30px;
+    font-weight: bold;
+}
+
+.category {
+    font-family: var(--Inconsolata);
+    font-size: 4vmin;
+}
+
+.dropdown-item:hover {
+    background-color: rgba(255, 81, 47, 0.1);
+    background-image: none;
+}
+
+.list-group {
+    margin-bottom: 8rem !important;
+}
+
+.purchase > h1 {
+    padding-top: 15vmin;
+    padding-bottom: 2em;
+    font-family: var(--Dosis);
+}
+
+.purchase > p {
+    color: var(--light-black);
+    font-size: 3vmin;
+    padding-bottom: 10vmin;
+}
+
+.purchase .cards .card {
+    width: 22rem;
+    margin: 3vmin;
+}
+
+.card {
+    text-align: -webkit-center;
+}
+
+.card .product {
+    max-height: 50%;
+    max-width: 70%;
+}
+
+.card .brand {
+    max-width: 40%;
+}
+
+.card .warranty {
+    max-width: 40%;
+}
+
+.cards div {
+    padding: 0;
+    margin: 0;
+}
+
+.cards .title {
+    background: rgba(255, 81, 47, 0.1);
+    padding: 0.1em 0.3em;
+}
+
+.card .card-text {
+    padding: 2.5rem 3rem;
+    color: var(--light-black);
+}
+
+.card-body .pricing {
+    position: absolute;
+    background: rgba(255, 81, 47, 0.1);
+    border-top-right-radius: 170px;
+    border-top-left-radius: 170px;
+    bottom: 0;
+    width: 100%;
+}
+
+.btn-danger {
+    color: #fff;
+    background-color: #ff512f;
+    border-color: #ff512f;
+    margin-bottom: 1rem !important;
+}
+
+.wishlist {
+    border-radius: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+    header .row .col-md-7 {
+        padding: 10vmin 1vmin 1vmin 1vmin;
+    }
+
+    header .row .col-md-5 {
+        padding-top: 0 !important;
+    }
+
+    header .row .col-md-5 img {
+        max-width: 70%;
+    }
+
+}
+
+@media only screen and (max-width: 426px) {
+    .on-mobile {
+        flex-wrap: inherit;
+    }
+
+    .navbar {
+        margin: 1rem;
+    }
+}
