--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,11 @@
 <header>
-  <div class="container p-0">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded shadow mt-3">
-      <a class="navbar-brand mx-3" href="#">
-        WOW
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="mr-auto"></div>
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Login</a>
-          <a class="nav-item nav-link" href="#">Register</a>
-        </div>
-      </div>
-    </nav>
-  </div>
-
+  <app-navbar></app-navbar>
   <div class="container text-center">
       <div class="row">
           <div class="col-md-7 col-sm-12">
               <h6>APPLIANCES DELIVER</h6>
               <h1>PRODUCTS WISHLIST</h1>
-              <button class="btn btn-light px-5 py-2">Login</button>
+              <button class="btn btn-light px-5 py-2" routerLink="/login">Login</button>
           </div>
           <div class="col-md-5 col-sm-12 mt-5 pt-5">
               <img src="../assets/electrodomestic.png" alt="electrodomestic">
