--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <section class="section-2 container-fluid p-0">
   <div class="purchase text-center">
     <h1>Add Whatever Product You Want <br> To Your Wishlist</h1>
