--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,12 @@
 <header>
-  <app-navbar></app-navbar>
+  <app-navbar background="light"></app-navbar>
   <div class="container text-center">
       <div class="row">
           <div class="col-md-7 col-sm-12">
               <h6>APPLIANCES DELIVER</h6>
               <h1>PRODUCTS WISHLIST</h1>
-              <button class="btn btn-light px-5 py-2" routerLink="/login">Login</button>
+              <button *ngIf="!isLoggedIn()" class="btn btn-light px-5 py-2" routerLink="/login">Login</button>
+              <button *ngIf="isLoggedIn()" class="btn btn-light px-5 py-2" routerLink="/wishlist">Your Wishlist</button>
           </div>
           <div class="col-md-5 col-sm-12 mt-5 pt-5">
               <img src="../assets/electrodomestic.png" alt="electrodomestic">
