--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container p-0">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light rounded shadow mt-3">
+  <nav class="navbar navbar-expand-lg rounded shadow mt-3" [ngClass]="background=='light' ? 'navbar-light bg-light' : 'navbar-light bg-gradient'">
     <a class="navbar-brand mx-3" href="/">
       WOW
     </a>
@@ -9,9 +9,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="mr-auto"></div>
-      <div class="navbar-nav">
+      <div *ngIf="!isLoggedIn()" class="navbar-nav">
         <a class="nav-item nav-link" href="#" routerLink="/login">Login</a>
         <a class="nav-item nav-link" href="#" routerLink="/register">Register</a>
+      </div>
+      <div *ngIf="isLoggedIn()" class="navbar-nav">
+          <a class="nav-item nav-link" href="#" routerLink="/wishlist">Wishlist</a>
+          <a class="nav-item nav-link" href="#" (click)="logout()">Logout</a>
       </div>
     </div>
   </nav>
