Option to share wishlist ready

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </div>
       <div *ngIf="isLoggedIn()" class="navbar-nav">
           <a class="nav-item nav-link" href="#" routerLink="/wishlist">Wishlist</a>
-          <a class="nav-item nav-link" href="#" (click)="logout()">Logout</a>
+          <a class="nav-item nav-link" style="cursor: pointer" (click)="logout()">Logout</a>
       </div>
     </div>
   </nav>
