New header image

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
               <button *ngIf="isLoggedIn()" class="btn btn-light px-5 py-2" routerLink="/wishlist">Your Wishlist</button>
           </div>
           <div class="col-md-5 col-sm-12 mt-5 pt-5">
-              <img src="../assets/electrodomestic.png" alt="electrodomestic">
+              <img src="../../assets/header.png" alt="electrodomestic">
           </div>
       </div>
   </div>
