--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,8 @@ header .row .col-md-7 {
 }
 
 header .row .col-md-5 img {
-    width: 90%;
+    width: 100%;
+    height: 80%;
 }
 
 header .container .col-md-7 h6 {
@@ -171,7 +172,7 @@ header .container .col-md-7 button {
     }
 
     header .row .col-md-5 img {
-        max-width: 70%;
+        margin-bottom: 7rem;
     }
 
 }
