--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="shadow-lg">
   <app-navbar background="light"></app-navbar>
   <div class="container text-center">
       <div class="row">
