--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -25,8 +25,9 @@
               {{ sort | sortName }}
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" (click)="selectSort('price')">{{ 'price' | sortName }}</a>
-              <a class="dropdown-item" (click)="selectSort('title')">{{ 'title' | sortName }}</a>
+              <a class="dropdown-item" (click)="selectSort('price_asc')">{{ 'price_asc' | sortName }}</a>
+              <a class="dropdown-item" (click)="selectSort('price_desc')">{{ 'price_desc' | sortName }}</a>
+              <a class="dropdown-item" (click)="selectSort('name')">{{ 'name' | sortName }}</a>
             </div>
           </div>
         </div>
@@ -50,7 +51,7 @@
               <li class="list-group-item" *ngIf="product.info_list[3]">{{ product.info_list[3] }}</li>
             </ul>
             <div class="pricing">
-              <h1>{{ product.price }}</h1>
+              <h1>€{{ product.price }}</h1>
               <a *ngIf="!product.onWishlist" style="cursor: pointer" class="btn btn-danger px-5 py-2 mb-5 wishlist" (click)="addToWishlist(product)">Add to wishlist</a>
               <a *ngIf="product.onWishlist" style="cursor: pointer" class="btn btn-danger px-5 py-2 mb-5 wishlist btn-delete" (click)="deleteFromWishlist(product)">Delete from wishlist</a>
             </div>
