--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -22,7 +22,7 @@
               <li class="list-group-item" *ngIf="product.info_list[3]">{{ product.info_list[3] }}</li>
             </ul>
             <div class="pricing">
-              <h1>{{ product.price }}</h1>
+              <h1>€{{ product.price }}</h1>
               <a style="cursor: pointer" class="btn btn-danger px-5 py-2 mb-5 wishlist" (click)="deleteFromWishlist(product)">Delete from wishlist</a>
             </div>
           </div>
