--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -36,7 +36,7 @@
     <img *ngIf="products.length == 0" class="spinner" src="../../assets/spinner.svg">
     <div *ngIf="products.length > 0" class="cards">
       <div class="d-flex flex-row justify-content-center flex-wrap">
-        <div class="card shadow" *ngFor="let product of products">
+        <div class="card shadow" *ngFor="let product of products | paginate: { itemsPerPage: 9, currentPage: p }">
           <img src="{{ product.brand }}" class="card-img-top brand mt-1">
           <img src="{{ product.img }}" class="card-img-top product">
           <img src="{{ product.warranty }}" class="card-img-top warranty mb-3">
@@ -59,5 +59,6 @@
         </div>
       </div>
     </div>
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
   </div>
 </section>
