--- a/src/app/products-list/products-list.component.html
+++ b/src/app/products-list/products-list.component.html
@@ -33,8 +33,9 @@
         </div>
       </div>
     </div>
-    <img *ngIf="products.length == 0" class="spinner" src="../../assets/spinner.svg">
-    <div *ngIf="products.length > 0" class="cards">
+    <img *ngIf="loading" class="spinner" src="../../assets/spinner.svg">
+    <h1  *ngIf="!loading && products.length == 0" class="pb-5">No content</h1>
+    <div *ngIf="!loading && products.length > 0" class="cards">
       <div class="d-flex flex-row justify-content-center flex-wrap">
         <div class="card shadow" *ngFor="let product of products | paginate: { itemsPerPage: 9, currentPage: p }">
           <img src="{{ product.brand }}" class="card-img-top brand mt-1">
@@ -59,6 +60,6 @@
         </div>
       </div>
     </div>
-    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    <pagination-controls *ngIf="!loading && products.length > 0" (pageChange)="p = $event"></pagination-controls>
   </div>
 </section>
